objects/Transfer_Tool_Approval__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Transfer_Tool_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attachments_Linked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachments Linked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Transfer Entitlements (New Service Contract)</relationshipLabel>
        <relationshipName>Transfer_Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Account__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Controller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Controller</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Transfer_Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Transfer Entitlements (Service Contract)</relationshipLabel>
        <relationshipName>Transfer_Tool_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transfer_Date__c</fullName>
        <label>Transfer Date</label>
        <type>Date</type>
    </fields>
    <label>Transfer Entitlements</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>License_Entitlement_Queue_Transfer_Tool_Approval</fullName>
        <filterScope>Queue</filterScope>
        <label>License Entitlement Queue</label>
        <queue>License_Entitlement_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Transfer_Tool_Approvers_APAC_Transfer_Tool_Approval</fullName>
        <filterScope>Queue</filterScope>
        <label>Transfer Tool Approvers APAC</label>
        <queue>Transfer_Tool_Approvers_APAC</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Transfer_Tool_Approvers_EMEA_Transfer_Tool_Approval</fullName>
        <filterScope>Queue</filterScope>
        <label>Transfer Tool Approvers EMEA</label>
        <queue>Transfer_Tool_Approvers_EMEA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Transfer_Tool_Approvers_LATAM_Transfer_Tool_Approval</fullName>
        <filterScope>Queue</filterScope>
        <label>Transfer Tool Approvers LATAM</label>
        <queue>Transfer_Tool_Approvers_LATAM</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Transfer_Tool_Approvers_North_America_Transfer_Tool_Approval</fullName>
        <filterScope>Queue</filterScope>
        <label>Transfer Tool Approvers North America</label>
        <queue>Transfer_Tool_Approvers_North_America</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>TTA{0000}</displayFormat>
        <label>Transfer Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transfer Entitlements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>